# ConsoleCasinoGame

./: .gitignore  CMakeLists.txt  README.md
include/: beg.h  blackjack.h  card.h  platform.h
src/: beg.c  blackjack.c  main.c
src/platform/: platform_unix.c  platform_windows.c
